refactor: :recycle: add logo to email

--- a/src/common/mail/forget-password.html
+++ b/src/common/mail/forget-password.html
@@ -13,7 +13,24 @@
         }
 
         body {
+            width: 100%;
+            height: 100%;
+            padding-top: 15px;
             margin: 0;
+            ;
+        }
+
+        img {
+            display: block;
+            width: 420px;
+            height: 140px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        h1 {
+            color: #404852;
+            font-size: 30px;
         }
 
         .main {
@@ -32,11 +49,9 @@
         .link {
             display: inline-block;
             background-color: #0AA1DD;
-            color: #FFFFFF;
             font-size: 20px;
             border-radius: 10px;
             padding: 15px 40px;
-            text-decoration: none;
             margin-top: 83px;
         }
 
@@ -54,7 +69,7 @@
             padding: 0 92px;
         }
 
-        @media only screen and (max-width: 800px) {
+        @media (max-width: 1100px) {
             .main {
                 width: 100%;
 
@@ -74,18 +89,23 @@
                 font-size: 16px;
                 padding: 0 45px;
             }
+
+            img {
+                width: 320px;
+            }
         }
     </style>
 </head>
 
-<body style="width:100%;height:100%;padding-top: 15px;">
-    <img src="cid:logo" alt="Logo" style="display:block;width:130px;height:130px;margin-left:auto;margin-right:auto;">
+<body>
+    <img src="cid:logo" alt="Logo">
     <div class="main">
-        <h1 style="color:#404852;font-size:30px;">Password Reset</h1>
+        <h1>Password Reset</h1>
 
         <h2 class="subtitle">If you’ve lost your password or wish to reset it, use
             the link below</h2>
-        <a href="{{url}}" target="_blank" rel="noopener noreferrer" class="link">Reset your password</a>
+        <a href="{{url}}" target="_blank" rel="noopener noreferrer" class="link"
+            style="text-decoration:none; color:#FFFFFF;">Reset your password</a>
 
         <p class="desc">If you did not request a password reset, you can safely ignore this email. Only a person with
             access tou your email can reset your account password.
