--- a/src/common/mail/verify.html
+++ b/src/common/mail/verify.html
@@ -13,7 +13,24 @@
         }
 
         body {
+            width: 100%;
+            height: 100%;
+            padding-top: 15px;
             margin: 0;
+            ;
+        }
+
+        img {
+            display: block;
+            width: 420px;
+            height: 130px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        h1 {
+            color: #404852;
+            font-size: 30px;
         }
 
         .main {
@@ -60,19 +77,24 @@
                 margin-top: 150px;
                 font-size: 16px;
             }
+
+            img {
+                width: 320px;
+            }
         }
     </style>
 </head>
 
-<body style="width:100%;height:100%;padding-top: 15px;">
-    <img src="cid:logo" alt="Logo" style="display:block;width:130px;height:130px;margin-left:auto;margin-right:auto;">
+<body style="">
+    <img src="cid:logo" alt="Logo">
     <div class="main">
-        <h1 style="color:#404852;font-size:30px;">You're one click away...</h1>
+        <h1>'re one click away...</h1>
         <a href="{{url}}" target="_blank" rel="noopener noreferrer" class="link">Verify
             your email
             address</a>
 
-        <p class="text">You've received this email because
+        <p class="text">We’re excited to have you get started. First, you need to verify your email address. Just press
+            the button below.
         </p>
     </div>
 
