fix: :bug: fix email html and email image

--- a/src/common/mail/verify.html
+++ b/src/common/mail/verify.html
@@ -88,7 +88,7 @@
 <body style="">
     <img src="cid:logo" alt="Logo">
     <div class="main">
-        <h1>'re one click away...</h1>
+        <h1>You're one click away...</h1>
         <a href="{{url}}" target="_blank" rel="noopener noreferrer" class="link">Verify
             your email
             address</a>
